--- a/week01/lecture05/style.css
+++ b/week01/lecture05/style.css
@@ -1,1 +1,41 @@
+*{
+  margin: 0;
+  padding: 0;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+h3{
+  text-align: center;
+}
+#par1{
+  background-color: aqua;
+  color:  red;
+}
 
+par1,par2,par3{
+  color: blue;
+}
+
+div>p{
+  background-color: yellow;
+}
+
+div+p{  /*adjacent Sibling selector(only one)*/
+  background-color: green;
+}
+
+h3~h4{  /*adjacent Sibling selector(All)*/
+  background-color: rgba(37, 74, 197, 0.498);
+}
+
+#hoverid:hover{
+  background-color: black;
+  color: white;
+}
+
+#hoverid::first-letter{
+  color: rgb(255, 0, 0);
+}
+
+a[target]{
+  color: cyan;
+}
